--- a/templates/POLICE/view_detect_det.html
+++ b/templates/POLICE/view_detect_det.html
@@ -14,7 +14,7 @@
           <button class="btn btn-success" type="submit">Search</button>
         </div><br><br>
         </form>
-    </div>
+    </div>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <table class="table table-striped">
     <tr>
         <td>s/no</td>
