added location in crim,unknown  view

--- a/templates/ADMIN/admin_view_deteted_unknown.html
+++ b/templates/ADMIN/admin_view_deteted_unknown.html
@@ -21,8 +21,8 @@
         <td>S/no</td>
         <td>Date</td>
         <td>Time</td>
-        <td>Details</td>
-
+        <td>Photo</td>
+         <td>Location</td>
     </tr>
    {% for i in data reversed %}
     <tr>
@@ -32,6 +32,8 @@
         <td><img src="{{ i.photo }}" height="100px" width="100px" style="border-radius: 8px;">
             {{ i.name }}
         </td>
+
+        <td>{{ i.username}}<br>{{ i.place}}<br>{{ i.district }}</td>
     </tr>
     {% endfor %}
 </table>
