added complaint view for police with user details

--- a/templates/ADMIN/view_detect_det.html
+++ b/templates/ADMIN/view_detect_det.html
@@ -21,7 +21,7 @@
           <button class="btn btn-success" type="submit">Search</button>
         </div><br><br>
         </form>
-    </div>
+    </div><br><br>
     <table class="table table-striped">
     <tr>
         <td>SN No</td>
@@ -29,6 +29,7 @@
         <td>TIME</td>
         <td>Details</td>
         <td>Criminal Name</td>
+        <td>Station</td>
         <td>Location</td>
 
     </tr>
