--- a/templates/POLICE/Police_index.html
+++ b/templates/POLICE/Police_index.html
@@ -127,6 +127,7 @@
               <ul class="dropdown-menu" role="menu">
 
                 <li><a href="/myapp/police_view_registered_users/#mu-features">View User</a></li>
+                  <li><a href="/myapp/p_complaints/#mu-features">View User Complaint</a></li>
 
               </ul>
             </li>
