--- a/templates/POLICE/view_deteted_unknown.html
+++ b/templates/POLICE/view_deteted_unknown.html
@@ -3,19 +3,19 @@
 
 <div class="row">
         <form class="d-flex" role="search" method="post" action="/myapp/p_search_view_detect_det/#abc">
-        <div class="col-lg-5">
+        <div class="col-lg-5" >
                  {% csrf_token %}
-            TO
-              <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search" name="fdate" value="2024-03-08">
+            From
+              <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search" name="fdate"  value="2024-03-08">
         </div>
-        <div class="col-lg-5">From
+        <div class="col-lg-5">To
               <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search" name="tdate" value="2024-03-08">
-        </div>
+        </div><br>
         <div class="col-lg-2">
           <button class="btn btn-success" type="submit">Search</button>
         </div><br><br>
         </form>
-    </div>
+    </div><br><br>
     <table class="table table-striped">
     <tr>
         <td>s/no</td>
