--- a/templates/POLICE/police complaint view.html
+++ b/templates/POLICE/police complaint view.html
@@ -4,14 +4,14 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AICCTV</title>
 </head>
-{% extends 'ADMIN/Admin_index.html' %}
+{% extends 'POLICE/Police_index.html' %}
 {% block body %}
 <body><div align="center">
     <div>
         <h1 style="font-weight: bold; background: linear-gradient(to right, #252525, #252525); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;">COMPLAINTS</h1>
     </div>
 </div><br>
-<form id="form1" name="form1" method="post" action="/myapp/admin_complaints_post/">
+<form id="form1" name="form1" method="post" action="/myapp/p_complaints_post/">
 {% csrf_token %}
 <table class="pull-left">
   <tr>
@@ -41,7 +41,7 @@
     <td>{{ i.complaint }}</td>
     <td>{{ i.status }}</td>
       <td>{% if i.status == 'pending' %}
-          <a href="/myapp/send_reply/{{ i.id }}" class="btn btn-success">Reply</a>
+          <a href="/myapp/p_send_reply/{{ i.id }}" class="btn btn-success">Reply</a>
       {% else %}
           {{ i.reply }}
           {% endif %}
