--- a/templates/POLICE/view_detect_det.html
+++ b/templates/POLICE/view_detect_det.html
@@ -4,12 +4,12 @@
 <div class="row">
         <form class="d-flex" role="search" method="post" action="/myapp/p_search_view_detect_det/#abc">
         <div class="col-lg-5">
-                 {% csrf_token %}
+                 {% csrf_token %}From
               <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search" name="fdate" value="2024-03-08">
-        </div>TO
-        <div class="col-lg-5">
-              <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search" name="tdate" value="2024-03-08" >
         </div>
+        <div class="col-lg-5">To
+              <input class="form-control me-2" type="date" placeholder="Search" aria-label="Search" name="tdate" value="2024-03-08" >
+        </div><br>
         <div class="col-lg-2">
           <button class="btn btn-success" type="submit">Search</button>
         </div><br><br>
