--- a/templates/POLICE/police suspicious activity.html
+++ b/templates/POLICE/police suspicious activity.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>Untitled Document</title>
+<title>AI CCTV</title>
 </head>
 {% extends 'POLICE/Police_index.html' %}
 {% block body %}
