--- a/templates/POLICE/police add criminals.html
+++ b/templates/POLICE/police add criminals.html
@@ -57,9 +57,15 @@
     <td>
       <textarea name="details" id="details" cols="45" rows="5" class="form-control"required></textarea></td>
   </tr>
+        <tr>
+        <td>Threat Level </td>
+        <td><input type="radio" name="threatlevel" value="HIGH"  checked/>High (A lookout notice will be issued for public dissemination) <br>
+        <input type="radio" name="threatlevel" value="MODERATE ">Moderate <br>
+        <input type="radio" name="threatlevel" value="LOW">Low<br>
+        </td>
+    </tr>
   <tr align="center">
   <td colspan="2"><input name="add" type="submit" value="Add" class="btn btn-info" /></td>
-
   </tr>
 </table>
 
