--- a/templates/POLICE/Chat.html
+++ b/templates/POLICE/Chat.html
@@ -77,7 +77,7 @@ content: "";
 <!--				</div></div>-->
 
 				<div class="col-md-8 col-xl-6 chat">
-												<a href="/student" style="color: white">Go to Home</a>
+					<a href="/myapp/police_view_registered_users/#mu-features" style="color: white">Go to Home</a>
 
 					<div class="card">
 						<div class="card-header msg_head">
