--- a/templates/POLICE/police view criminals.html
+++ b/templates/POLICE/police view criminals.html
@@ -24,8 +24,11 @@
     <td>PHOTO-1</td>
     <td>PHOTO-2</td>
     <td>PHOTO-3</td>
+      <td> Threat level</td>
     <td>DETAILS</td>
+
     <td>CRIMINALS</td>
+
       <td></td>
       <td></td>
   </tr>
@@ -35,8 +38,9 @@
     <td><img src="{{ i.photo }}"height="60px" width="60px"> </td>
     <td><img src="{{ i.photo1 }}"height="60px" width="60px"> </td>
     <td><img src="{{ i.photo2 }}"height="60px" width="60px"> </td>
+           <td>{{ i.threatlevel }}</td>
            <td>{{ i.details }}</td>
-    <td>{{ i.name }}<br>{{ i.place }}<br>{{i.pin }}<br>{{ i.district }}</td>
+           <td><br>{{i.pin }}<br>{{ i.district }}</td>
            <td><a href="/myapp/police_edit_criminals/{{ i.id }}" class="btn btn-info">Edit</a> </td>
            <td><a href="/myapp/police_delete_criminal/{{ i.id }}" onclick="return confirm('Are You Sure!!!')" class="btn btn-danger">Delete</a> </td>
       {% endfor %}
