--- a/templates/ADMIN/admin view criminals.html
+++ b/templates/ADMIN/admin view criminals.html
@@ -1,48 +1,48 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>AICCTV | CRIMINALS </title>
+<title>AICCTV</title>
 </head>
 {% extends 'ADMIN/Admin_index.html' %}
 {% block body %}
-<body>
-<div align="center">
-    <div>
-        <h1 style="font-weight: bold; background: linear-gradient(to right, #252525, #252525); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;">CRIMINALS LIST</h1>
-    </div>
-</div><br>
-<form id="form1" name="form1" method="post" action="/myapp/view_criminals_post/">
-    <table class="pull-left">
-  <tr>
-      {% csrf_token %}
-    <td style="padding-right: 20px;">Name </td>
-    <td  style="padding-right: 20px;" >
-      <input type="text" name="textfield" id="textfield" class="form-control" requierd/></td>
-    <td><input type="submit" name="button" id="button" value="SEARCH" class="btn btn-success"/></td>
-  </tr>
-</table><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <table class="table table-bordered" >
-  <tr></tr>
-  <tr>
-    <td>SN NO</td>
-    <td>PHOTO-1</td>
-    <td>PHOTO-2</td>
-    <td>PHOTO-3</td>
-    <td>DETAILS</td>
-    <td>CRIMINALS</td>
-  </tr>
-       {% for i in data %}
-  <tr>
-    <td>{{forloop.counter  }}</td>
-    <td><img src="{{ i.photo }}"height="60px" width="60px" style="border-radius: 5px;"> </td>
-    <td><img src="{{ i.photo1 }}"height="60px" width="60px" style="border-radius: 5px;"> </td>
-    <td><img src="{{ i.photo2 }}"height="60px" width="60px"  style="border-radius: 5px;"> </td>
-           <td>{{ i.details }}</td>
-    <td>{{ i.name }}<br>{{ i.place }}<br>{{i.pin }}<br>{{ i.district }}</td>
-      {% endfor %}
-  </tr>
-  </table>
+<body style="font-family: Arial, sans-serif; background-color: #f0f0f0;">
+<form id="form1" name="form1" method="post" action="/myapp/police_view_criminals_post/" style="margin-bottom: 20px;">
+    {% csrf_token %}
+    <table style="margin: 0 auto;">
+        <tr>
+            <td style="padding-right: 20px;">Search :</td>
+            <td style="padding-right: 20px;">
+                <input type="text" name="name" id="textfield" style="padding: 5px; border: 1px solid #ccc; border-radius: 5px;"/></td>
+            <td><input type="submit" name="button" id="button" value="GO" style="padding: 5px 10px; background-color: #28a745; color: #fff; border: none; border-radius: 5px; cursor: pointer;" /></td>
+        </tr>
+    </table>
+    <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
+        <tr>
+            <th style="padding: 10px; background-color: #f8f9fa;">SN NO</th>
+            <th style="padding: 10px; background-color: #f8f9fa;">PHOTO-1</th>
+            <th style="padding: 10px; background-color: #f8f9fa;">PHOTO-2</th>
+            <th style="padding: 10px; background-color: #f8f9fa;">PHOTO-3</th>
+            <th style="padding: 10px; background-color: #f8f9fa;">Threat level</th>
+            <th style="padding: 10px; background-color: #f8f9fa;">DETAILS</th>
+            <th style="padding: 10px; background-color: #f8f9fa;">CRIMINALS</th>
+            <th style="padding: 10px; background-color: #f8f9fa;"></th>
+            <th style="padding: 10px; background-color: #f8f9fa;"></th>
+        </tr>
+        {% for i in data %}
+        <tr>
+            <td style="padding: 10px;">{{ forloop.counter }}</td>
+            <td style="padding: 10px;"><img src="{{ i.photo }}" alt="PHOTO-1" style="height: 60px; width: 60px;"></td>
+            <td style="padding: 10px;"><img src="{{ i.photo1 }}" alt="PHOTO-2" style="height: 60px; width: 60px;"></td>
+            <td style="padding: 10px;"><img src="{{ i.photo2 }}" alt="PHOTO-3" style="height: 60px; width: 60px;"></td>
+            <td style="padding: 10px;">{{ i.threatlevel }}</td>
+            <td style="padding: 10px;">{{ i.details }}</td>
+            <td style="padding: 10px;"><br>{{ i.pin }}<br>{{ i.district }}</td>
+            <td style="padding: 10px;"><a href="/myapp/police_edit_criminals/{{ i.id }}" style="padding: 5px 10px; background-color: #007bff; color: #fff; text-decoration: none; border-radius: 5px;">Edit</a></td>
+            <td style="padding: 10px;"><a href="/myapp/police_delete_criminal/{{ i.id }}" onclick="return confirm('Are You Sure!!!')" style="padding: 5px 10px; background-color: #dc3545; color: #fff; text-decoration: none; border-radius: 5px;">Delete</a></td>
+        </tr>
+        {% endfor %}
+    </table>
 </form>
 </body>
 {% endblock %}
