--- a/templates/POLICE/Police_index.html
+++ b/templates/POLICE/Police_index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title> AI-CCTV | POLICE</title>
 
     <!-- Favicon -->
@@ -23,11 +23,11 @@
     <!-- Main style sheet -->
     <link href="/static/Home/assets/css/style.css" rel="stylesheet">
 
-   
+
     <!-- Google Fonts -->
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,300,300italic,500,700' rel='stylesheet' type='text/css'>
-    
+
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -37,11 +37,11 @@
     <![endif]-->
 
   </head>
-  <body> 
+  <body>
 
   <!--START SCROLL TOP BUTTON -->
     <a class="scrollToTop" href="#">
-      <i class="fa fa-angle-up"></i>      
+      <i class="fa fa-angle-up"></i>
     </a>
   <!-- END SCROLL TOP BUTTON -->
 
@@ -84,7 +84,7 @@
   <!-- End header  -->
   <!-- Start menu -->
   <section id="mu-menu">
-    <nav class="navbar navbar-default" role="navigation">  
+    <nav class="navbar navbar-default" role="navigation">
       <div class="container">
         <div class="navbar-header">
           <!-- FOR MOBILE VIEW COLLAPSED BUTTON -->
@@ -94,7 +94,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- LOGO -->              
+          <!-- LOGO -->
           <!-- TEXT BASED LOGO -->
           <a class="navbar-brand" href="/myapp/homepage/"><i><img src="/static/Home/assets/images/logotrans.png" width="50" height="50"/></i><span> AICCTV </span></a>
           <!-- IMG BASED LOGO  -->
@@ -155,7 +155,7 @@
 {#                <li><a href="/myapp/complaints/#mu-features">View Complaint</a></li>#}
 
 {#                <li><a href="/myapp/app_reviews/#mu-features">View Review</a></li>#}
-                  <li><a href="/myapp/p_view_anonymous/#mu-features">view Annonymose Report</a></li>
+                  <li><a href="/myapp/p_view_anonymous/#mu-features">View Annonymose Report</a></li>
                 <li><a href="/myapp/police_change_password/#mu-features">Change Password</a></li>
 
 
@@ -164,20 +164,20 @@
                </li>
               <li><a href="/myapp/logout/#mu-features"><i class="fa fa fa-sign-out"></i></a></li>
           </ul>
-        </div><!--/.nav-collapse -->        
-      </div>     
+        </div><!--/.nav-collapse -->
+      </div>
     </nav>
   </section>
   <!-- End menu -->
   <!-- Start search box -->
   <div id="mu-search">
-    <div class="mu-search-area">      
+    <div class="mu-search-area">
       <button class="mu-search-close"><span class="fa fa-close"></span></button>
       <div class="container">
         <div class="row">
-          <div class="col-md-12">            
+          <div class="col-md-12">
             <form class="mu-search-form">
-              <input type="search" placeholder="Type Your Keyword(s) & Hit Enter">              
+              <input type="search" placeholder="Type Your Keyword(s) & Hit Enter">
             </form>
           </div>
         </div>
@@ -220,7 +220,7 @@
     <!-- Start single slider item -->
     <!-- deleeted a slide from here -->
     </div>
-    <!-- Start single slider item -->    
+    <!-- Start single slider item -->
   </section>
   <!-- End Slider -->
 
@@ -245,7 +245,7 @@
             <div class="mu-title">
 
                 {% block body %}
-                
+
                 {% endblock %}
             </div>
 
@@ -316,7 +316,7 @@
     <!-- end footer bottom -->
   </footer>
   <!-- End footer -->
-  
+
   <!-- jQuery library -->
   <script src="/static/Home/assets/js/jquery.min.js"></script>
   <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -328,10 +328,10 @@
   <script type="text/javascript" src="/static/Home/assets/js/jquery.counterup.js"></script>
   <!-- Mixit slider -->
   <script type="text/javascript" src="/static/Home/assets/js/jquery.mixitup.js"></script>
-  <!-- Add fancyBox -->        
+  <!-- Add fancyBox -->
   <script type="text/javascript" src="/static/Home/assets/js/jquery.fancybox.pack.js"></script>
-  
-  
+
+
   <!-- Custom js -->
   <script src="/static/Home/assets/js/custom.js"></script>
 
