--- a/templates/POLICE/police complaint view.html
+++ b/templates/POLICE/police complaint view.html
@@ -3,52 +3,114 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>AICCTV</title>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        background-color: #f0f0f0;
+    }
+    h1 {
+        font-weight: bold;
+        background: linear-gradient(to right, #252525, #252525);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;
+        text-align: center;
+    }
+    table {
+        margin: auto;
+        border-collapse: collapse;
+        width: 80%;
+    }
+    th, td {
+        border: 1px solid #dddddd;
+        padding: 8px;
+        text-align: center;
+    }
+    tr:nth-child(even) {
+        background-color: #f2f2f2;
+    }
+    input[type="date"] {
+        padding: 8px;
+        border-radius: 5px;
+        border: 1px solid #ccc;
+    }
+    input[type="submit"] {
+        padding: 8px 20px;
+        border: none;
+        border-radius: 5px;
+        background-color: #4CAF50;
+        color: white;
+        cursor: pointer;
+    }
+    input[type="submit"]:hover {
+        background-color: #45a049;
+    }
+    .btn-success {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 8px 20px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 5px;
+    }
+    .btn-success:hover {
+        background-color: #45a049;
+    }
+</style>
 </head>
 {% extends 'POLICE/Police_index.html' %}
 {% block body %}
-<body><div align="center">
+<body>
+<div align="center">
     <div>
-        <h1 style="font-weight: bold; background: linear-gradient(to right, #252525, #252525); -webkit-background-clip: text; -webkit-text-fill-color: transparent; text-shadow: 0px 0px 0px #000, 0px 0px 0px #252525, 0px 0px 0px #000, 0px 0px 0px #252525;">COMPLAINTS</h1>
+        <h1>COMPLAINTS</h1>
     </div>
 </div><br>
 <form id="form1" name="form1" method="post" action="/myapp/p_complaints_post/">
-{% csrf_token %}
-<table class="pull-left">
-  <tr>
-    <td style="padding-right: 20px;">From Date</td>
-    <td style="padding-right: 20px;">
-      <input type="date" name="from" id="textfield" value="2024-01-01"/></td>
-    <td style="padding-right: 20px;">To date</td>
-    <td style="padding-right: 20px;">
-      <input type="date" name="to" id="textfield2" value="2024-01-01"/></td>
-        <td><input type="submit" name="button" id="button" value="Search" class="btn btn-info"/></td>
-
-  </tr>
-</table><br><br>
-    <table class="table table-bordered">
-  <tr>
-    <td>SI NO</td><td>User</td>
-    <td>DATE</td>
-    <td>COMPLAINT</td>
-    <td>STATUS</td>
-    <td>REPLY</td>
-  </tr>
-    {% for i in data %}
-  <tr>
-    <td>{{forloop.counter  }}&nbsp;</td>
-  <td>{{ i.USER.name }}<br>{{ i.USER.place }},{{ i.USER.post}}<br>{{ i.USER.phone }}</td>
-    <td>&nbsp;{{ i.date }}</td>
-    <td>{{ i.complaint }}</td>
-    <td>{{ i.status }}</td>
-      <td>{% if i.status == 'pending' %}
-          <a href="/myapp/p_send_reply/{{ i.id }}" class="btn btn-success">Reply</a>
-      {% else %}
-          {{ i.reply }}
-          {% endif %}
-      </td>
-  </tr>
-    {% endfor %}
-</table>
+    {% csrf_token %}
+    <table>
+        <tr>
+            <td style="padding-right: 20px;">From Date</td>
+            <td style="padding-right: 20px;">
+                <input type="date" name="from" id="textfield" value="2024-01-01"/></td>
+            <td style="padding-right: 20px;">To date</td>
+            <td style="padding-right: 20px;">
+                <input type="date" name="to" id="textfield2" value="2024-01-01"/></td>
+            <td><input type="submit" name="button" id="button" value="Search" class="btn btn-info"/></td>
+        </tr>
+    </table><br><br>
+    <table>
+        <tr>
+            <th>SI NO</th>
+            <th>User</th>
+            <th>DATE</th>
+            <th>COMPLAINT</th>
+            <th>STATUS</th>
+            <th>REPLY</th>
+        </tr>
+        {% for i in data %}
+        <tr>
+            <td>{{forloop.counter}}</td>
+            <td>{{ i.USER.name }}<br>{{ i.USER.place }}, {{ i.USER.post }}<br>{{ i.USER.phone }}</td>
+            <td>{{ i.date }}</td>
+            <td>{{ i.complaint }}</td>
+            <td>{{ i.status }}</td>
+            <td>
+                {% if i.status == 'pending' %}
+                    <a href="/myapp/p_send_reply/{{ i.id }}" class="btn btn-success">Reply</a>
+                {% else %}
+                    {{ i.reply }}
+                {% endif %}
+            </td>
+        </tr>
+        {% endfor %}
+    </table>
 </form>
-</body>{% endblock %}
+</body>
+{% endblock %}
 </html>
